# Licensor

./: .markdownlint.json  CHANGELOG.md  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.json  vite.config.ts
.github/: .actionlint.yaml  CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml  codeql.yml  release.yml
app/: Cargo.toml  tauri.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: lib.rs  main.rs  seed.rs
app/src/commands/: attachments.rs  documents.rs  export.rs  folders.rs  metadata.rs  mod.rs  preview.rs  templates.rs
app/templates/: commercial.md  example.md
www/: App.tsx  main.tsx
www/components/: AttachmentPanel.tsx  DocumentForm.tsx  DocumentList.tsx  DocumentView.tsx  FolderTree.tsx  GenerateDocument.tsx  MetadataPanel.tsx  SearchResults.tsx  Sidebar.tsx  TemplateEditor.tsx  TemplateList.tsx  UpdateBanner.tsx
www/components/ui/: Tooltip.tsx  VariablePills.tsx  index.ts
www/hooks/: useAttachments.ts  useDatabase.ts  useDocuments.ts  useFolders.ts  useMetadata.ts  useSearch.ts  useTemplates.ts  useUpdater.ts
www/lib/: db.ts  exportZip.ts  types.ts
www/styles/: global.css
