[package]
name = "Licensor"
version = "0.1.0" # x-release-please-version
description = "A Tauri-based document template manager and renderer"
authors = ["MJ Anglin <contact@mjanglin.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "licensor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
comrak = "0.50.0"
minijinja = "2.16.0"
uuid = { version = "1.21.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde_yaml = "0.9.34"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
